# casm

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/ParseF/: parse.c  token.c
src/ToBinary/: expr2bin.c
src/include/: parse.h  token.h  typecheck.h
src/include/ToBinary/: expr2bin.h
test/: main.casm  test.casm
